--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,25 +1,15 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "Existing Dockerfile",
-	"build": {
-		// Sets the run context to one level up instead of the .devcontainer folder.
-		"context": "..",
-		// Update the 'dockerfile' property if you aren't using the standard 'Dockerfile' filename.
-		"dockerfile": "../dockerfile"
-	},
+	"name": "Docker Compose Dev Environment",
+	"dockerComposeFile": "../docker-compose.yml",
+	"service": "dagster_webserver",
+	"workspaceFolder": "/app",
 	"features": {
 		"ghcr.io/devcontainers/features/python:1": {},
 		"ghcr.io/itsmechlark/features/postgresql:1": {}
 	},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [3000, 4000, 5432],
 
-	// Uncomment the next line to run commands after the container is created.
-	// "postCreateCommand": "cat /etc/os-release",
-
-	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
 			"settings": {
@@ -31,8 +21,5 @@
 				"ms-azuretools.vscode-docker"
 			]
 		}
-	},
-
-	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "devcontainer"
+	}
 }
