--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,19 @@
-version: '3.8'
+version: '3.9'
 
 services:
   dagster_webserver:
-    image: dagster
     container_name: dagster_webserver
     build: 
       context: .
       dockerfile: Dockerfile
-    entrypoint:
+    entrypoint: 
       - dagster-webserver
       - --host
       - "0.0.0.0"
       - --port
       - "3000"
       - --workspace
-      - workspace.yml
+      - "dagster_home/workspace.yml"
     environment:
       - DAGSTER_POSTGRES_USER=${POSTGRES_USER}
       - DAGSTER_POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -23,7 +22,6 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/io_manager_storage:/tmp/io_manager_storage
-    working_dir: /opt/personal_finance_dashboard
     networks:
       - dagster_network
     depends_on:
@@ -31,8 +29,6 @@ services:
       - pipeline_personal_finance
     ports:
       - "3000:3000"
-    expose:
-      - "3000"
     logging:
       driver: json-file
       options:
@@ -40,7 +36,9 @@ services:
         max-file: "3"
 
   dagster_daemon:
-    image: dagster
+    build: 
+      context: .
+      dockerfile: Dockerfile
     entrypoint:
       - dagster-daemon
       - run
@@ -62,18 +60,18 @@ services:
 
   pipeline_personal_finance:
     container_name: pipeline_personal_finance
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    restart: always
+    build:
+      context: ./pipeline_personal_finance
+      dockerfile: dockerfile
     environment:
-      - DAGSTER_HOME=/opt/personal_finance_dashboard/dagster_finance
-      - DBT_PROJECT_DIR=/opt/personal_finance_dashboard/dbt_finance
-      - DAGSTER_DBT_PARSE_PROJECT_ON_LOAD=1
+      - DAGSTER_HOME=/docker/appdata/dagster/dagster_home
     volumes:
-      - .:/opt/personal_finance_dashboard 
-    working_dir: /opt/personal_finance_dashboard
+      - .:/docker/appdata/dagster/pipeline_personal_finance
     ports:
       - "4000:4000"
+    networks:
+      - dagster_network
     logging:
       driver: json-file
       options:
@@ -93,7 +91,7 @@ services:
       - PGID=${GRP_ID}
       - TZ=${TIMEZONE}
     ports:
-      - "5000:5432"
+      - "5432:5432"
     volumes:
       - /docker/appdata/postgres:/var/lib/postgresql/data
     networks:
