--- a/docker.yml
+++ b/docker.yml
@@ -1,10 +1,10 @@
-scheduler:
-  module: dagster.core.scheduler
-  class: DagsterDaemonScheduler
+# scheduler:
+#   module: dagster.core.scheduler
+#   class: DagsterDaemonScheduler
 
-run_coordinator:
-  module: dagster.core.run_coordinator
-  class: QueuedRunCoordinator
+# run_coordinator:
+#   module: dagster.core.run_coordinator
+#   class: QueuedRunCoordinator
 
 
 run_launcher:
@@ -24,47 +24,47 @@ run_launcher:
         - /tmp/io_manager_storage:/tmp/io_manager_storage
         - /tmp/dagster-data:/opt/dagster/dagster_home/storage #must match dockerfile variable.
 
-run_storage:
-  module: dagster_postgres.run_storage
-  class: PostgresRunStorage
-  config:
-    postgres_db:
-      hostname: dagster_postgresql
-      username:
-        env: DAGSTER_POSTGRES_USER
-      password:
-        env: DAGSTER_POSTGRES_PASSWORD
-      db_name:
-        env: POSTGRES_DB
-      port: 5432
+# run_storage:
+#   module: dagster_postgres.run_storage
+#   class: PostgresRunStorage
+#   config:
+#     postgres_db:
+#       hostname: dagster_postgresql
+#       username:
+#         env: DAGSTER_POSTGRES_USER
+#       password:
+#         env: DAGSTER_POSTGRES_PASSWORD
+#       db_name:
+#         env: POSTGRES_DB
+#       port: 5432
 
-schedule_storage:
-  module: dagster_postgres.schedule_storage
-  class: PostgresScheduleStorage
-  config:
-    postgres_db:
-      hostname: dagster_postgresql
-      username:
-        env: DAGSTER_POSTGRES_USER
-      password:
-        env: DAGSTER_POSTGRES_PASSWORD
-      db_name:
-        env: POSTGRES_DB
-      port: 5432
+# schedule_storage:
+#   module: dagster_postgres.schedule_storage
+#   class: PostgresScheduleStorage
+#   config:
+#     postgres_db:
+#       hostname: dagster_postgresql
+#       username:
+#         env: DAGSTER_POSTGRES_USER
+#       password:
+#         env: DAGSTER_POSTGRES_PASSWORD
+#       db_name:
+#         env: POSTGRES_DB
+#       port: 5432
 
-event_log_storage:
-  module: dagster_postgres.event_log
-  class: PostgresEventLogStorage
-  config:
-    postgres_db:
-      hostname: dagster_postgresql
-      username:
-        env: DAGSTER_POSTGRES_USER
-      password:
-        env: DAGSTER_POSTGRES_PASSWORD
-      db_name:
-        env: POSTGRES_DB
-      port: 5432
+# event_log_storage:
+#   module: dagster_postgres.event_log
+#   class: PostgresEventLogStorage
+#   config:
+#     postgres_db:
+#       hostname: dagster_postgresql
+#       username:
+#         env: DAGSTER_POSTGRES_USER
+#       password:
+#         env: DAGSTER_POSTGRES_PASSWORD
+#       db_name:
+#         env: POSTGRES_DB
+#       port: 5432
 
 # compute_logs:
 #   module: dagster_aws.s3.compute_log_manager
