--- a/pipeline_personal_finance/pyproject.toml
+++ b/pipeline_personal_finance/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "dagster-instance"
+name = "pipeline-personal-finance"
 version = "0.1.0"
 description = ""
 authors = ["Phil Patterson <philip.james.patterson@gmail.com>"]
@@ -7,19 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
+quiffen = "^2.0.11"
+pandas = ">=1.5.1,<2.0.0"
 dagster = "^1.7.10"
 dagster-postgres = "^0.23.10"
-dagster-duckdb = "^0.23.10"
-dagster-duckdb-polars = "^0.23.10"
-duckdb = "^1.0.0"
-dagster-graphql = "^1.7.10"
-dagster-webserver = "^1.7.10"
-dagster-docker = "^0.23.10"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.dagster]
-module_name = "pipeline_personal_finance"
