Making progress: 1. pipeline_personal_finance now stays up and can be seen by dagster instance.  Network established. 2. The volume attaching to pipeline must only be created after the containers are built, which means I need to copy those across.  but also I needed to correct the volume path. 3. Dagter.yaml appears to need to be corrected to match the postgres server setup.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 	"name": "Docker Compose Dev Environment",
 	"dockerComposeFile": "../docker-compose.yml",
 	"service": "dagster_webserver",
-	"workspaceFolder": "/app",
+	"workspaceFolder": "/docker/appdata/dagster",
 	"features": {
 		"ghcr.io/devcontainers/features/python:1": {},
 		"ghcr.io/itsmechlark/features/postgresql:1": {}
