--- a/pipeline_personal_finance/dockerfile
+++ b/pipeline_personal_finance/dockerfile
@@ -4,7 +4,6 @@ FROM python:3.11
 # Set the working directory in the Docker image
 WORKDIR /docker/appdata/dagster/pipeline_personal_finance
 
-# Copy the current directory contents into the container at the specified directory
 COPY . .
 
 # Set correct permissions for files
@@ -17,10 +16,14 @@ RUN pip install -r requirements.txt
 # Expose the port that Dagster gRPC server uses
 EXPOSE 4000
 
+# Set the working directory to where the .env needs to be moved
 WORKDIR /docker/appdata/dagster
 
-# Move the .env file from the current directory to the parent directory
+# Move the .env file from the pipeline_personal_finance directory to the current directory
 RUN mv pipeline_personal_finance/.env .
+
+# Keep the container running with a command that does not exit
+# CMD ["tail", "-f", "/dev/null"]
 
 # Command to run the Dagster gRPC server
 CMD ["dagster", "api", "grpc", "-h", "0.0.0.0", "-p", "4000", "-m", "pipeline_personal_finance"]
