About to delete Dagster.yaml to see if defaults give a better result

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ DAGSTER_POSTGRES_USER=postgres
 DAGSTER_POSTGRES_PASSWORD=test
 DAGSTER_POSTGRES_IP=postgres
 DAGSTER_POSTGRES_PORT=5432
+
+DASGTER_HOME=/docker/appdata/dagster/dagster_home
