--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3.9'
 
 services:
   dagster_webserver:
-    container_name: dagster_webserver
     build: 
       context: .
       dockerfile: Dockerfile
@@ -14,12 +13,17 @@ services:
       - "3000"
       - --workspace
       - "dagster_home/workspace.yaml"
+    container_name: dagster_webserver
+    expose:
+      - "3000"
+    ports:
+      - "3000:3000"
     environment:
       - DAGSTER_POSTGRES_USER=${POSTGRES_USER}
-      - DAGSTER_POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - DAGSTER_POSTGRES_CONN_STR=${POSTGRES_CONN_STR}
+      - DAGSTER_POSTGRES_PASSWORD=${DAGSTER_POSTGRES_PASSWORD}
+      # - DAGSTER_POSTGRES_CONN_STR=${POSTGRES_CONN_STR}
       - DAGSTER_POSTGRES_DB=personal_finance
-      - DAGSTER_HOME=/docker/appdata/dagster/dagster_home/
+      # - DAGSTER_HOME=/docker/appdata/dagster/dagster_home/
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/io_manager_storage:/tmp/io_manager_storage
@@ -28,10 +32,6 @@ services:
     depends_on:
       - dagster_postgres
       - pipeline_personal_finance
-    expose:
-      - "3000"
-    ports:
-      - "3000:3000"
     logging:
       driver: json-file
       options:
@@ -55,7 +55,7 @@ services:
     restart: on-failure
     environment:
       - DAGSTER_POSTGRES_USER=${POSTGRES_USER}
-      - DAGSTER_POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - DAGSTER_POSTGRES_PASSWORD=${DAGSTER_POSTGRES_PASSWORD}
       - DAGSTER_POSTGRES_CONN_STR=${POSTGRES_CONN_STR}
       - DAGSTER_POSTGRES_DB=personal_finance
     volumes:
@@ -72,6 +72,7 @@ services:
     build:
       context: ./pipeline_personal_finance
       dockerfile: dockerfile
+    image: pipeline_personal_finance
     environment:
       TIMEZONE: Australia/Melbourne
       DAGSTER_POSTGRES_USER: postgres
@@ -80,7 +81,7 @@ services:
       DAGSTER_POSTGRES_PORT: 5432
       DAGSTER_CURRENT_IMAGE: "pipeline_personal_finance"
     volumes:
-      - ./pipeline_personal_finance:/docker/appdata/dagster/pipeline_personal_finance
+#      - ./pipeline_personal_finance:/docker/appdata/dagster/pipeline_personal_finance
       - /tmp/dagster-data:/docker/appdata/dagster/dagster_home/
     networks:
       - dagster_network
@@ -93,8 +94,8 @@ services:
     container_name: dagster_postgres
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=personal_finance
+      - DAGSTER_POSTGRES_PASSWORD=${DAGSTER_POSTGRES_PASSWORD}
+      - DAGSTER_POSTGRES_DB=personal_finance
     ports:
       - "5432:5432"
     volumes:
