--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,7 @@ services:
     environment:
       - DAGSTER_POSTGRES_USER=${POSTGRES_USER}
       - DAGSTER_POSTGRES_PASSWORD=${DAGSTER_POSTGRES_PASSWORD}
-      # - DAGSTER_POSTGRES_CONN_STR=${POSTGRES_CONN_STR}
       - DAGSTER_POSTGRES_DB=personal_finance
-      # - DAGSTER_HOME=/docker/appdata/dagster/dagster_home/
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/io_manager_storage:/tmp/io_manager_storage
@@ -56,7 +54,7 @@ services:
     environment:
       - DAGSTER_POSTGRES_USER=${POSTGRES_USER}
       - DAGSTER_POSTGRES_PASSWORD=${DAGSTER_POSTGRES_PASSWORD}
-      - DAGSTER_POSTGRES_CONN_STR=${POSTGRES_CONN_STR}
+      # - DAGSTER_POSTGRES_CONN_STR=${POSTGRES_CONN_STR}
       - DAGSTER_POSTGRES_DB=personal_finance
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -77,7 +75,7 @@ services:
       TIMEZONE: Australia/Melbourne
       DAGSTER_POSTGRES_USER: postgres
       DAGSTER_POSTGRES_PASSWORD: test
-      DAGSTER_POSTGRES_IP: postgres
+      DAGSTER_POSTGRES_HOST: dagster_postgres
       DAGSTER_POSTGRES_PORT: 5432
       DAGSTER_CURRENT_IMAGE: "pipeline_personal_finance"
     volumes:
@@ -85,8 +83,8 @@ services:
       - /tmp/dagster-data:/docker/appdata/dagster/dagster_home/
     networks:
       - dagster_network
-          
 
+  
   dagster_postgres:
     image: postgres:16
     shm_size: 128mb
