--- a/dagster.yaml
+++ b/dagster.yaml
@@ -36,7 +36,8 @@ run_storage:
         env: DAGSTER_POSTGRES_PASSWORD
       db_name:
         env: DAGSTER_POSTGRES_DB
-      port: 5432
+      port: 
+        env: DAGSTER_POSTGRES_PORT
 
 schedule_storage:
   module: dagster_postgres.schedule_storage
@@ -50,7 +51,8 @@ schedule_storage:
         env: DAGSTER_POSTGRES_PASSWORD
       db_name:
         env: DAGSTER_POSTGRES_DB
-      port: 5432
+      port: 
+        env: DAGSTER_POSTGRES_PORT
 
 
 event_log_storage:
@@ -65,7 +67,8 @@ event_log_storage:
         env: DAGSTER_POSTGRES_PASSWORD
       db_name:
         env: DAGSTER_POSTGRES_DB
-      port: 5432
+      port: 
+        env: DAGSTER_POSTGRES_PORT
       
 compute_logs:
   module: dagster.core.storage.local_compute_log_manager
